[gd_scene load_steps=5 format=3 uid="uid://d2yg0jguura13"]

[ext_resource type="Texture2D" uid="uid://0q688xgmic1v" path="res://Assets/Props Items and VFX/Sunnyland FX/Sprites/item-feedback/item-feedback-1.png" id="1_vcqqu"]
[ext_resource type="Script" uid="uid://xtaprpgwquut" path="res://powerup.gd" id="1_wh0le"]
[ext_resource type="AudioStream" uid="uid://dxm70kc84hbkw" path="res://Assets/powerup.mp3" id="3_6cuax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wh0le"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wh0le")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wh0le")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vcqqu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6cuax")
volume_db = -10.0
pitch_scale = 1.6

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
